--- a/.github/workflows/publish-cocoapods.yml
+++ b/.github/workflows/publish-cocoapods.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   publish:
     name: Publish CocoaPods
-    runs-on: macOS-latest
+    runs-on: macOS-11
     env:
       COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
 
