--- a/.github/workflows/swift-pacakge.yml
+++ b/.github/workflows/swift-pacakge.yml
@@ -4,7 +4,7 @@ on: [push, workflow_dispatch]
 jobs:
   build:
     name: Build
-    runs-on: macOS-latest
+    runs-on: macOS-11
 
     steps:
     - name: Checkout Code
@@ -17,7 +17,7 @@ jobs:
 
   test:
     name: Test
-    runs-on: macOS-latest
+    runs-on: macOS-11
     needs: build
 
     steps:
