--- a/.github/workflows/xcodebuild.yml
+++ b/.github/workflows/xcodebuild.yml
@@ -4,7 +4,7 @@ on: [push, workflow_dispatch]
 jobs:
   ios:
     name: iOS
-    runs-on: macOS-latest
+    runs-on: macOS-11
 
     steps:
     - name: Checkout Code
@@ -29,7 +29,7 @@ jobs:
 
   maccatalyst:
     name: Mac Catalyst
-    runs-on: macOS-latest
+    runs-on: macOS-11
 
     steps:
     - name: Checkout Code
@@ -45,7 +45,7 @@ jobs:
 
   macos:
     name: macOS
-    runs-on: macOS-latest
+    runs-on: macOS-11
 
     steps:
     - name: Checkout Code
@@ -61,7 +61,7 @@ jobs:
 
   tvos:
     name: tvOS
-    runs-on: macOS-latest
+    runs-on: macOS-11
 
     steps:
     - name: Checkout Code
