Added workflow file to list of workflow trigger paths

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -7,6 +7,7 @@ on:
     tags-ignore:
       - '**'
     paths:
+      - '.github/workflows/documentation.yml'
       - '**.swift' # DocC only considers Swift files
       - 'Documentation/SRDTestUtilities.docc/**'
 
