--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -7,6 +7,7 @@ on:
     tags-ignore:
       - '**'
     paths:
+      - '.github/workflows/swiftlint.yml'
       - '.swiftlint.yml'
       - '**.swift'
 
