--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,6 +22,10 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
+    - name: Setup Environment
+      run: |
+        mkdir -p "$LOGSDIR"
+
     - name: Build Documentation
       run: |
         xcodebuild docbuild -project "SRDTestUtilities.xcodeproj" -scheme "SRDTestUtilities" -destination "generic/platform=iOS" 2>&1 | tee "$LOGSDIR/build.log"
