Added missing "Setup Environment" step for workflows

--- a/.github/workflows/publish-cocoapods.yml
+++ b/.github/workflows/publish-cocoapods.yml
@@ -20,6 +20,10 @@ jobs:
       with:
         version: latest
 
+    - name: Setup Environment
+      run: |
+        mkdir -p "$LOGSDIR"
+
     - name: Publish CocoaPod
       run: |
         pod trunk push SRDTestUtilities.podspec --verbose 2>&1 | tee "$LOGSDIR/CocoaPods.log"
